tests/idris2/error/error030/Issue1236.idr
private
data Foo : Type

public export
data Foo : Type where
